--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-string-replace": "^0.4.4",
     "yup": "^0.29.1"
   },
   "scripts": {
